--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node --files -r tsconfig-paths/register ./node_modules/typeorm/cli.js --dataSource ormconfig.ts",
-    "migrate:generate": "npm run typeorm migration:generate -n",
-    "migrate:create": "npm run typeorm migration:create -n",
-    "migrate:up": "npm run typeorm migration:run",
-    "migrate:down": "npm run typeorm migration:revert"
+    "typeorm": "ts-node --files -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migrate:generate": "npm run typeorm migration:generate -- -d ormconfig.ts",
+    "migrate:create": "npm run typeorm migration:create --",
+    "migrate:up": "npm run typeorm migration:run -- -d ormconfig.ts",
+    "migrate:down": "npm run typeorm migration:revert -- -d ormconfig.ts"
   },
   "dependencies": {
     "@nestjs/common": "8.4.7",
     "@nestjs/core": "8.4.7",
     "@nestjs/platform-express": "8.4.7",
     "@nestjs/typeorm": "8.1.4",
+    "class-transformer": "^0.5.1",
     "class-validator": "0.13.2",
     "pg": "8.7.3",
     "reflect-metadata": "0.1.13",
